<resources>
    <string name="app_name">Amber</string>
    <string name="btEmergency">Emergency</string>
    <string name="viewemergencycontacts">ViewEmergencyContacts</string>
    <string name="mainTitle">Amber</string>
    <string name="btnBackDescrtiption">Back Button</string>
    <string name="btnAddContactDescription">Add Contact</string>
    <string name="txtContactTitle">Contacts</string>
    <string name="txtAddContactDescription">Add Contact</string>
    <string name="contactAddName">Name</string>
    <string name="btnManageContacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="control">Parental Controls</string>
    <string name="about">About</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
</resources>
