<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtContactTitle"
        android:id="@+id/txtContactTitle"
        android:layout_alignBottom="@+id/imgBtnAddContact"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgBtnBack"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/btnBackDescrtiption" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgBtnAddContact"
        android:layout_alignBottom="@+id/imgBtnBack"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/txtAddContactDescription"
        android:focusableInTouchMode="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtContactList"
        android:layout_below="@+id/txtContactTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

</RelativeLayout>